--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+release
 node_modules
 dist
 dist-ssr
@@ -22,4 +21,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-src/assets/familly_members.json
